--- a/app/src/main/res/menu/ordersummary_actions.xml
+++ b/app/src/main/res/menu/ordersummary_actions.xml
@@ -3,6 +3,10 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- Settings, should always be in the overflow -->
+    <item android:id="@+id/action_checklist"
+        android:title="Check List"
+        app:showAsAction="never"/>
+
     <item android:id="@+id/action_dailyorders"
           android:title="Daily Orders"
           app:showAsAction="never"/>
